[gd_scene load_steps=5 format=2]

[ext_resource path="res://Levels/Level 1/Stage3.gd" type="Script" id=1]
[ext_resource path="res://Levels/Level 1/PathFollow2D.gd" type="Script" id=2]
[ext_resource path="res://Enemies/Enemy1/Enemy1.tscn" type="PackedScene" id=3]

[sub_resource type="Curve2D" id=1]

bake_interval = 5.0
_data = {
"points": PoolVector2Array( 0, 0, 0, 0, 461.007, 379.368, 0, 0, 0, 0, 1264, 352, 0, 0, 0, 0, 912, 848, 0, 0, 0, 0, 461.007, 379.368 )
}

[node name="Stage 3" type="Path2D" index="0"]

editor/display_folded = true
self_modulate = Color( 0.5, 0.6, 1, 0.7 )
curve = SubResource( 1 )
script = ExtResource( 1 )

[node name="PathFollow2D" type="PathFollow2D" parent="." index="0"]

editor/display_folded = true
position = Vector2( 461.007, 379.368 )
rotation = -0.0340555
offset = 0.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy1" parent="PathFollow2D" index="0" instance=ExtResource( 3 )]

[node name="PathFollow2D2" type="PathFollow2D" parent="." index="1"]

editor/display_folded = true
position = Vector2( 1241.15, 352.779 )
rotation = -0.0340663
offset = 780.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy2" parent="PathFollow2D2" index="0" instance=ExtResource( 3 )]

[node name="PathFollow2D3" type="PathFollow2D" parent="." index="2"]

position = Vector2( 901.969, 837.577 )
rotation = -2.33701
offset = 1420.0
h_offset = 0.0
v_offset = 0.0
rotate = true
cubic_interp = true
loop = true
lookahead = 4.0
script = ExtResource( 2 )

[node name="Enemy3" parent="PathFollow2D3" index="0" instance=ExtResource( 3 )]

[connection signal="died" from="PathFollow2D/Enemy1" to="." method="_on_Enemy1_died"]

[connection signal="died" from="PathFollow2D2/Enemy2" to="." method="_on_Enemy2_died"]

[connection signal="died" from="PathFollow2D3/Enemy3" to="." method="_on_Enemy3_died"]


